[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/DragonUI.gd" type="Script" id=1]
[ext_resource path="res://Art/Characters/Monsters/Dragons/BlackDragon.png" type="Texture" id=2]
[ext_resource path="res://Art/health_ui.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Boss.gd" type="Script" id=4]
[ext_resource path="res://LaserBeam/EnemyLaserBeam2D.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": false,
"name": "Attack",
"speed": 2.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 176.011

[sub_resource type="CircleShape2D" id=9]
radius = 32.6

[sub_resource type="CircleShape2D" id=10]
radius = 27.01

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 4.71239
scale = Vector2( 3, 3 )
frames = SubResource( 7 )
animation = "Idle"
frame = 1
playing = true

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
visible = false
shape = SubResource( 8 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 9 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 30.0
default_color = Color( 1, 1, 1, 1 )

[node name="LaserBeam2D" parent="." instance=ExtResource( 5 )]
scale = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI"]
margin_left = 138.0
margin_top = 147.0
margin_right = 199.0
margin_bottom = 158.0
color = Color( 0.666667, 0.0941176, 0.956863, 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/UI"]
position = Vector2( 161, 153 )
texture = ExtResource( 3 )

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="FlyTimer" type="Timer" parent="."]

[node name="FlyWaitTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
[connection signal="timeout" from="FlyWaitTimer" to="." method="_on_FlyWaitTimer_timeout"]
